# Indexer

./: .gitignore  BUILD.md  README.md  build.ps1  pyproject.toml  requirements.txt
.github/workflows/: release.yml
packaging/: Indexer.iss  Indexer.spec  launcher.py
scripts/: fetch_embedding_model.py  fetch_tesseract.ps1  make_icons.py
src/indexer/: app.py  bundler.py  cli.py  embedder.py  logging_setup.py  matcher.py  ocr.py  parser.py  references.py  updater.py
src/indexer/assets/: style.qss
src/indexer/ui/: about_dialog.py  disclaimer.py  main_window.py  preview.py  step_build.py  step_review.py  step_select.py  update_dialog.py  widgets.py  workers.py
tests/: make_fixtures.py  test_end_to_end.py
